syntax = "proto3";

package maple2;

message MailNotificationRequest {
  int64 mail_id = 1;
  int64 character_id = 2;
}

message MailNotificationResponse {
  bool delivered = 1;
}
